<resources>
    <string name="app_name">ISIP</string>
    <string name="title_activity_me">Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Encuestador</string>
    <string name="nav_header_subtitle">encuesta@ab-sistemas.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Bienvenido</string>
    <string name="menu_gallery">Empresas pendientes</string>
    <string name="menu_slideshow">Salir</string>
    <string name="menu_inicial">Ver encuestas realizadas</string>
    <string name="menu_tools">Ver encuestas realizadas</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="messageWithLink"><u>¿Aún no te has registrado como Organización?<b> Haz clic aquí</b></u></string>
    <string name="IniciarEn">"@id/nav_home"</string>

    <string name="section_format">Section : %1$d</string>
    <string name="URLAPI">https://formatoisp-api.herokuapp.com/api</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="roles">
        <item>Seleccionar:</item>
        <item>Persona</item>
        <item>Representante Legal</item>
    </string-array>

</resources>
