<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/iconmenuhome"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_archive"
            android:title="@string/menu_inicial" />
        <item
            android:id="@+id/acerca"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="Acerca de" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_salir"
            android:title="@string/menu_slideshow" />
    </group>
</menu>
