<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!--- Un comentario de una sola línea
     Aquí se agregan todos los fragmentos con sus atributos de referencia al codigo del
     fragmento y a su vista
     -->

    <fragment
        android:id="@+id/nav_home"
        android:name="com.formato.isp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.formato.isp.ui.EmpresasPendientes.Empresas_pendFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.formato.isp.ui.salir.SalirFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.formato.isp.ui.EncuestasRealizadas.EncuestasFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/gestion_documentalnavigation"
        android:name="com.formato.isp.Gestion_documental"
        android:label="gestion documental"
        tools:layout="@layout/gestion_documental_fragment" />
    />



</navigation>